fix blockchain
